--- a/demo.html
+++ b/demo.html
@@ -2,19 +2,15 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>seed-element Demo</title>
+  <title>uvalib-hours-ui Demo</title>
 
   <script src="../platform/platform.js"></script>
-  <link rel="import" href="seed-element.html">
+  <link rel="import" href="uvalib-hours-ui.html">
 
 </head>
 <body unresolved>
 
-  <p>An example of using <code>&lt;seed-element></code>:</p>
-
-  <seed-element>
-    <h2>Hello seed-element</h2>
-  </seed-element>
+  <uvalib-hours-ui library="alderman"></uvalib-hours-ui>
 
 </body>
 </html>
