--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
 </head>
 <body unresolved>
 
-  <uvalib-hours-ui library="alderman"></uvalib-hours-ui>
+  <uvalib-hours-ui calendarId="7jh4d881ba11icf34ld2jbrd34@group.calendar.google.com"></uvalib-hours-ui>
 
 </body>
 </html>
