--- a/uvalib-hours-ui.html
+++ b/uvalib-hours-ui.html
@@ -20,29 +20,20 @@ Element providing a styled hours widget for the Library.
 <polymer-element name="uvalib-hours-ui" extends="uvalib-hours" attributes="startDateTime endDateTime">
   <template>
     <link rel="stylesheet" href="uvalib-hours-ui.css" />
-    <template repeat="{{lib in listing}}">
-      <div id="{{lib.id}}" layout horizontal center center-justified>
-        <paper-icon-button icon="arrow-back" on-tap="{{previousSet}}"></paper-icon-button>
-        <core-animated-pages selected="{{selectedPage}}" valueattr="id" transitions="{{transitions}}" flex>
-          <section id="one" flex horizontal wrap around-justified layout>
-            <template repeat="{{event in one}}">
-              <div class="card" horizontal center center-justified layout style="border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; -webkit-transform-origin: 0px 0px; color:black;">one <span>{{event.start.dateTime}}</span></div>
+    <div layout horizontal center center-justified>
+      <paper-icon-button icon="arrow-back" on-tap="{{previousSet}}"></paper-icon-button>
+      <core-animated-pages selected="{{selectedPage}}" valueattr="id" transitions="{{transitions}}" flex>
+        <template repeat="{{set, index in sets}}">
+          <section id="{{index}}" flex horizontal wrap around-justified layout>
+            <template repeat="{{event in set}}">
+              <div class="card" horizontal center center-justified layout style="border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; -webkit-transform-origin: 0px 0px; color:black;"><div>{{event.id}}</div> <div>{{event.text}}</div></div>
             </template>
           </section>
-          <section id="two" flex horizontal wrap around-justified layout>
-            <template repeat="{{event in two}}">
-              <div class="card" horizontal center center-justified layout style="border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; -webkit-transform-origin: 0px 0px; color:black;">two <span>{{event.start.dateTime}}</span></div>
-            </template>
-          </section>
-          <section id="three" flex horizontal wrap around-justified layout>
-            <template repeat="{{event in three}}">
-              <div class="card" horizontal center center-justified layout style="border-top-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; -webkit-transform-origin: 0px 0px; color:black;">three <span>{{event.start.dateTime}}</span></div>
-            </template>
-          </section>
-        </core-animated-pages>
-        <paper-icon-button icon="arrow-forward" on-tap="{{nextSet}}"></paper-icon-button>
-      </div>
-    </template>
+        </template>
+      </core-animated-pages>
+      <paper-icon-button icon="arrow-forward" on-tap="{{nextSet}}"></paper-icon-button>
+    </div>
+
   </template>
 
   <script>
@@ -50,44 +41,33 @@ Element providing a styled hours widget for the Library.
     Polymer('uvalib-hours-ui', {
 
       transitions: "slide-from-right",
-      selectedPage: "one",
-
-      startDateTime: null,
-      endDateTime: null,
+      selectedPage: 0,
 
       subset: [],
       one: [],
       two: [],
       three: [],
 
+      sets: [],
       page: 0,
       dayCount: 5,
 
       ready: function(){
-        this.addEventListener('calendar-update',function(e){
-//          var foo = "bar";
-//          this.getElementById(id+'cals');
+        this.super();
+        this.addEventListener('calendar-updated', function(e){
           var libid = e.detail.id;
           this.updateCalendarSets(libid);
-//          var template = this.shadowRoots['uvalib-hours-ui'].querySelector('#'+e.detail.id+'cals');
-//          template.iterator_.updateIteratedValue();
         }.bind(this) );
       },
-
-      nextSet: function(){ this.selectedPage = "next" },
-      previousSet: function(){ this.selectedPage = "previous" },
-
+ 
+      nextSet: function(){ ++this.selectedPage},
+      previousSet: function(){--this.selectedPage},
+ 
       updateCalendarSets: function(libid) {
-        var calEl = this.shadowRoots['uvalib-hours']
-                        .querySelector('google-calendar-events#'+libid);
-        this.subset = calEl.getSubset(this.startDateTime, this.endDateTime);
-        this.one = this.subset.splice(this.page*this.dayCount, this.dayCount);
-        this.two = this.subset.splice((this.page+1)*this.dayCount, this.dayCount);
-        this.selectedPage = "one"
-      },
-
-      observe: {
-        //page: 
+        for (var i=0; i<=this.calendar.length+this.dayCount; i=i+this.dayCount) {
+          this.sets.push( this.calendar.slice(i, i+this.dayCount) );
+        }
+        foo="bar"
       }
 
     });
